[package]
version = "0.1.0"
authors = ["Pierre Baillet <pierre@baillet.name>"]

name = "small-deployer"
description = "A small git webhook server that can be used to trigger deploys. Send notification in slack."
repository = "https://github.com/octplane/small-deployer"

keywords = ["deploy", "github", "gitlab", "hook", "slack"]
readme = "README"

license= "MIT"

[dependencies]
rustc-serialize = "0.3"
hyper = "~0.7.2"
time = "~0.1.33"

slack-hook = "0.1.2"
small-logger = "0.1.2" # {path = "../small-logger/"}
